NP-3015: small fixes